--- a/CCLM/CCLM/Views/User/Edit.cshtml
+++ b/CCLM/CCLM/Views/User/Edit.cshtml
@@ -21,35 +21,44 @@
                         @using (Html.BeginForm("Edit", "User", FormMethod.Post, new { @class = "form", id = "EditForm" }))
                         {
                             <div class="col-lg-6">
-                                <div class="form-group">
-                                    @Html.LabelFor(m => m.NickName)
-                                    @Html.TextBoxFor(m => m.NickName, new { @class = "form-control", autocomplete = "off", @readonly="readonly"})
-                                </div>
-                                <div class="form-group">
-                                    @Html.LabelFor(m => m.FullName)
-                                    @Html.TextBoxFor(m => m.FullName, new { @class = "form-control", autocomplete = "off", @readonly = "readonly" })
-                                </div>
-                                <div class="form-group">
-                                    @Html.LabelFor(m => m.Email)
-                                    @Html.TextBoxFor(m => m.Email, new { @class = "form-control", autocomplete = "off", @readonly = "readonly" })
-                                </div>
+                                <fieldset disabled>
+                                    <div class="form-group">
+                                        @Html.LabelFor(m => m.NickName)
+                                        @Html.TextBoxFor(m => m.NickName, new { @class = "form-control", autocomplete = "off" })
+                                    </div>
+                                    <div class="form-group">
+                                        @Html.LabelFor(m => m.FullName)
+                                        @Html.TextBoxFor(m => m.FullName, new { @class = "form-control", autocomplete = "off" })
+                                    </div>
+                                    <div class="form-group">
+                                        @Html.LabelFor(m => m.Email)
+                                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control", autocomplete = "off" })
+                                    </div>
+                                </fieldset>
                             </div>
+                        
                             <div class="col-lg-6">
+                                <fieldset disabled>
+                                    <div class="form-group">
+                                        @Html.LabelFor(m => m.IsFull)
+                                        @Html.CheckBoxFor(m => m.IsFull, new { @class = "checkbox", autocomplete = "off" })
+                                    </div>
+                                </fieldset>
                                 <div class="form-group">
                                     @Html.LabelFor(m => m.DistributionCentersSelected)
                                     @Html.ListBoxFor(x => x.DistributionCentersSelected, new MultiSelectList(Model.DistributionCentersSelect, "Value", "Text"), new { @class = "form-control" })
                                 </div>
                             </div>
-                            
+
                             <div class="col-lg-12 center">
-                                <button type="submit" class="btn btn-info btn-circle btn-lg">
+                                <button type="submit" class="btn btn-success btn-circle btn-lg" title="Guardar">
                                     <i class="fa fa-check"></i>
                                 </button>
-                                <a href="@Url.Action("Index", "User")" id="cancel" class="btn btn-warning btn-circle btn-lg"><i class="fa fa-times"></i></a>
+                                <a href="@Url.Action("Index", "User")" id="cancel" class="btn btn-warning btn-circle btn-lg" title="Cancelar"><i class="fa fa-times"></i></a>
                             </div>
-                            
-                        }
-                    </div>
+
+                            }
+</div>
                             
                     <!-- /.row (nested) -->
                 </div>
