--- a/CCLM/CCLM/Views/User/Index.cshtml
+++ b/CCLM/CCLM/Views/User/Index.cshtml
@@ -15,6 +15,9 @@
     <div class="col-lg-12">
         <div class="panel panel-default">
             <div class="panel-heading">
+
+                <a href="@Url.Action("Create", "User")" id="cancel" class="btn btn-default btn-circle" title="Nuevo"><i class="fa fa-list"></i></a>
+
                 Usuarios Registrados
             </div>
             <!-- /.panel-heading -->
@@ -37,7 +40,7 @@
                                 <td>@Html.DisplayFor(x => row.FullName)</td>
                                 <td>@Html.DisplayFor(x => row.Email)</td>
                                 <td>@Html.DisplayFor(x => row.DistributionCentersAmount)</td>
-                                <td><a href="@Url.Action("Edit", "User", new { id = row.Id })" type="submit" title="Editar usuario">Editar</a></td>
+                                <td><a href="@Url.Action("Edit", "User", new { id = row.Id })" type="submit" title="Editar usuario" class="btn btn-primary btn-circle"><i class="fa fa-edit"></i></a></td>
                             </tr>
                         }
                     </tbody>
@@ -49,6 +52,7 @@
     </div>
     <!-- /.col-lg-12 -->
 </div>
+
 <script src="~/Content/sb-admin/vendor/datatables/js/jquery.dataTables.min.js"></script>
 <script src="~/Content/sb-admin/vendor/datatables-plugins/dataTables.bootstrap.min.js"></script>
 <script src="~/Content/sb-admin/vendor/datatables-responsive/dataTables.responsive.js"></script>
@@ -59,3 +63,6 @@
         });
     });
 </script>
+
+
+
