--- a/CCLM/CCLM/Views/DistributionCenter/Index.cshtml
+++ b/CCLM/CCLM/Views/DistributionCenter/Index.cshtml
@@ -1,14 +1,13 @@
-﻿@model IEnumerable<CCLM.Models.User>
+﻿@model IEnumerable<CCLM.Models.DistributionCenter>
 @{
     ViewBag.Title = "Index";
 }
-
 <link href="~/Content/sb-admin/vendor/datatables-plugins/dataTables.bootstrap.css" rel="stylesheet">
 <link href="~/Content/sb-admin/vendor/datatables-responsive/dataTables.responsive.css" rel="stylesheet">
 
 <div class="row">
     <div class="col-lg-12">
-        <h1 class="page-header">Usuarios</h1>
+        <h1 class="page-header">Sitios</h1>
     </div>
     <!-- /.col-lg-12 -->
 </div>
@@ -17,19 +16,21 @@
         <div class="panel panel-default">
             <div class="panel-heading">
 
-                <a href="@Url.Action("Create", "User")" id="cancel" class="btn btn-default btn-circle" title="Nuevo"><i class="fa fa-list"></i></a>
+                <a href="@Url.Action("Create", "DistributionCenter")" id="cancel" class="btn btn-default btn-circle" title="Nuevo"><i class="fa fa-list"></i></a>
 
-                Usuarios Registrados
+                Sitios Registrados
             </div>
             <!-- /.panel-heading -->
             <div class="panel-body">
                 <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
                     <thead>
                         <tr>
-                            <th>@Html.DisplayNameFor(m => m.NickName)</th>
-                            <th>@Html.DisplayNameFor(m => m.FullName)</th>
-                            <th>@Html.DisplayNameFor(m => m.Email)</th>
-                            <th>@Html.DisplayNameFor(m => m.DistributionCentersAmount)</th>
+                            <th>@Html.DisplayNameFor(m => m.Code)</th>
+                            <th>@Html.DisplayNameFor(m => m.Name)</th>
+                            <th>@Html.DisplayNameFor(m => m.ProcessStartTime)</th>
+                            <th>@Html.DisplayNameFor(m => m.ProcessEndTime)</th>
+                            <th>@Html.DisplayNameFor(m => m.BinnacleDays)</th>
+
                             <th></th>
                         </tr>
                     </thead>
@@ -37,11 +38,13 @@
                         @foreach (var row in Model)
                         {
                             <tr>
-                                <td>@Html.DisplayFor(x => row.NickName)</td>
-                                <td>@Html.DisplayFor(x => row.FullName)</td>
-                                <td>@Html.DisplayFor(x => row.Email)</td>
-                                <td>@Html.DisplayFor(x => row.DistributionCentersAmount)</td>
-                                <td><a href="@Url.Action("Edit", "User", new { id = row.Id })" type="submit" title="Editar usuario" class="btn btn-primary btn-circle"><i class="fa fa-edit"></i></a></td>
+                                <td>@Html.DisplayFor(x => row.Code)</td>
+                                <td>@Html.DisplayFor(x => row.Name)</td>
+                                <td>@Html.DisplayFor(x => row.ProcessStartTime)</td>
+                                <td>@Html.DisplayFor(x => row.ProcessEndTime)</td>
+                                <td>@Html.DisplayFor(x => row.BinnacleDays)</td>
+
+                                <td><a href="@Url.Action("Edit", "DistributionCenter", new { id = row.Id })" type="submit" title="Editar usuario" class="btn btn-primary btn-circle"><i class="fa fa-edit"></i></a></td>
                             </tr>
                         }
                     </tbody>
@@ -53,7 +56,6 @@
     </div>
     <!-- /.col-lg-12 -->
 </div>
-
 @section scripts{
     <script src="~/Content/sb-admin/vendor/datatables/js/jquery.dataTables.min.js"></script>
     <script src="~/Content/sb-admin/vendor/datatables-plugins/dataTables.bootstrap.min.js"></script>
