--- a/CCLM/CCLM/Views/DistributionCenter/Create.cshtml
+++ b/CCLM/CCLM/Views/DistributionCenter/Create.cshtml
@@ -2,10 +2,12 @@
 @{
     ViewBag.Title = "Create";
 }
+<link rel="stylesheet" href="~/Content/bootstrap-touchspin/src/jquery.bootstrap-touchspin.css">
+<link rel="stylesheet" href="~/Content/bootstrap-timepicker/css/bootstrap-timepicker.min.css" />
 
 <div class="row">
     <div class="col-lg-12">
-        <h1 class="page-header">Usuarios</h1>
+        <h1 class="page-header">Sitios</h1>
     </div>
     <!-- /.col-lg-12 -->
 </div>
@@ -25,25 +27,32 @@
                                 @Html.LabelFor(m => m.Code)
                                 @Html.TextBoxFor(m => m.Code, new { @class = "form-control", autocomplete = "off" })
                             </div>
+                            
                             <div class="form-group">
-                                @Html.LabelFor(m => m.Name)
-                                @Html.TextBoxFor(m => m.Name, new { @class = "form-control", autocomplete = "off" })
+                                @Html.LabelFor(m => m.ProcessStartTime)
+                                <div class="input-group bootstrap-timepicker timepicker">
+                                    @Html.TextBoxFor(m => m.ProcessStartTime, new { @class = "form-control", autocomplete = "off", @id = "statTimepicker" })
+                                    <span class="input-group-addon"><i class="glyphicon glyphicon-time"></i></span>
+                                </div>
                             </div>
                         </div>
                         <div class="col-lg-6">
                             <div class="form-group">
-                                @Html.LabelFor(m => m.ProcessStartTime)
-                                @Html.TextBoxFor(m => m.ProcessStartTime, new { @class = "form-control", autocomplete = "off" })
+                                @Html.LabelFor(m => m.Name)
+                                @Html.TextBoxFor(m => m.Name, new { @class = "form-control", autocomplete = "off" })
                             </div>
                             <div class="form-group">
                                 @Html.LabelFor(m => m.ProcessEndTime)
-                                @Html.TextBoxFor(m => m.ProcessEndTime, new { @class = "form-control", autocomplete = "off" })
+                                <div class="input-group bootstrap-timepicker timepicker">
+                                    @Html.TextBoxFor(m => m.ProcessEndTime, new { @class = "form-control", autocomplete = "off", @id = "endTimepicker" })
+                                    <span class="input-group-addon"><i class="glyphicon glyphicon-time"></i></span>
+                                </div>
                             </div>
                         </div>
                         <div class="col-lg-6">
                             <div class="form-group">
                                 @Html.LabelFor(m => m.BinnacleDays)
-                                @Html.TextBoxFor(m => m.BinnacleDays, new { @class = "form-control", autocomplete = "off" })
+                                @Html.TextBoxFor(m => m.BinnacleDays, new { @class = "form-control", autocomplete = "off", @id="tsBinnacle" })
                             </div>
                         </div>
 
@@ -66,3 +75,25 @@
     <!-- /.col-lg-12 -->
 </div>
 <!-- /.row -->
+@section scripts
+{
+    <script src="~/Content/bootstrap-touchspin/src/jquery.bootstrap-touchspin.js"></script>
+    <script src="~/Content/bootstrap-timepicker/js/bootstrap-timepicker.min.js"></script>
+    <script>
+        $("#tsBinnacle").TouchSpin({
+            min: 1,
+            max: 7,
+            stepinterval: 1,
+            maxboostedstep: 7,
+        });
+        $('#statTimepicker').timepicker({
+            showMeridian: false,
+            defaultTime: false
+        });
+        $('#endTimepicker').timepicker({
+            showMeridian: false,
+            defaultTime: false
+        });
+    </script>
+
+}
