--- a/CCLM/CCLM/Views/User/Create.cshtml
+++ b/CCLM/CCLM/Views/User/Create.cshtml
@@ -3,6 +3,7 @@
     ViewBag.Title = "Create";
 }
 
+<link rel="stylesheet" href="~/Content/chosen_v1.8.2/chosen.css">
 <div class="row">
     <div class="col-lg-12">
         <h1 class="page-header">Usuarios</h1>
@@ -42,7 +43,7 @@
                             </div>
                             <div class="form-group">
                                 @Html.LabelFor(m => m.DistributionCentersSelected)
-                                @Html.ListBoxFor(x => x.DistributionCentersSelected, new MultiSelectList(Model.DistributionCentersSelect, "Value", "Text"), new { @class = "form-control" })
+                                @Html.ListBoxFor(x => x.DistributionCentersSelected, new MultiSelectList(Model.DistributionCentersSelect, "Value", "Text"), new { @class = "form-control chosen-select", @data_placeholder="Selecciona algun sitio"})
                             </div>
                         </div>
 
@@ -65,3 +66,12 @@
     <!-- /.col-lg-12 -->
 </div>
 <!-- /.row -->
+@section scripts
+{
+    <script src="~/Content/chosen_v1.8.2/chosen.jquery.js" type="text/javascript"></script>
+    @*<script src="~/Content/chosen_v1.8.2/docsupport/prism.js" type="text/javascript" charset="utf-8"></script>
+    <script src="~/Content/chosen_v1.8.2/docsupport/init.js" type="text/javascript" charset="utf-8"></script>*@
+    <script>
+        $(".chosen-select").chosen();
+    </script>
+}
