--- a/CCLM/CCLM/Views/User/Edit.cshtml
+++ b/CCLM/CCLM/Views/User/Edit.cshtml
@@ -2,70 +2,80 @@
 @{
     ViewBag.Title = "Edit";
 }
+<link rel="stylesheet" href="~/Content/chosen_v1.8.2/chosen.css">
 
-    <div class="row">
-        <div class="col-lg-12">
-            <h1 class="page-header">Usuarios</h1>
-        </div>
-        <!-- /.col-lg-12 -->
+<div class="row">
+    <div class="col-lg-12">
+        <h1 class="page-header">Usuarios</h1>
     </div>
-    <!-- /.row -->
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    Editar Usuario
-                </div>
-                <div class="panel-body">
-                    <div class="row">
-                        @using (Html.BeginForm("Edit", "User", FormMethod.Post, new { @class = "form", id = "EditForm" }))
-                        {
-                            <div class="col-lg-6">
-                                <fieldset disabled>
-                                    <div class="form-group">
-                                        @Html.LabelFor(m => m.NickName)
-                                        @Html.TextBoxFor(m => m.NickName, new { @class = "form-control", autocomplete = "off" })
-                                    </div>
-                                    <div class="form-group">
-                                        @Html.LabelFor(m => m.FullName)
-                                        @Html.TextBoxFor(m => m.FullName, new { @class = "form-control", autocomplete = "off" })
-                                    </div>
-                                    <div class="form-group">
-                                        @Html.LabelFor(m => m.Email)
-                                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control", autocomplete = "off" })
-                                    </div>
-                                </fieldset>
-                            </div>
-                        
-                            <div class="col-lg-6">
-                                <fieldset disabled>
-                                    <div class="form-group">
-                                        @Html.LabelFor(m => m.IsFull)
-                                        @Html.CheckBoxFor(m => m.IsFull, new { @class = "checkbox", autocomplete = "off" })
-                                    </div>
-                                </fieldset>
-                                <div class="form-group">
-                                    @Html.LabelFor(m => m.DistributionCentersSelected)
-                                    @Html.ListBoxFor(x => x.DistributionCentersSelected, new MultiSelectList(Model.DistributionCentersSelect, "Value", "Text"), new { @class = "form-control" })
-                                </div>
-                            </div>
-
-                            <div class="col-lg-12 center">
-                                <button type="submit" class="btn btn-success btn-circle btn-lg" title="Guardar">
-                                    <i class="fa fa-check"></i>
-                                </button>
-                                <a href="@Url.Action("Index", "User")" id="cancel" class="btn btn-warning btn-circle btn-lg" title="Cancelar"><i class="fa fa-times"></i></a>
-                            </div>
-
-                            }
+    <!-- /.col-lg-12 -->
 </div>
-                            
-                    <!-- /.row (nested) -->
-                </div>
-                <!-- /.panel-body -->
+<!-- /.row -->
+<div class="row">
+    <div class="col-lg-12">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                Editar Usuario
             </div>
-            <!-- /.panel -->
+            <div class="panel-body">
+                <div class="row">
+                    @using (Html.BeginForm("Edit", "User", FormMethod.Post, new { @class = "form", id = "EditForm" }))
+                    {
+                        <div class="col-lg-6">
+                            <fieldset disabled>
+                                <div class="form-group">
+                                    @Html.LabelFor(m => m.NickName)
+                                    @Html.TextBoxFor(m => m.NickName, new { @class = "form-control", autocomplete = "off" })
+                                </div>
+                                <div class="form-group">
+                                    @Html.LabelFor(m => m.FullName)
+                                    @Html.TextBoxFor(m => m.FullName, new { @class = "form-control", autocomplete = "off" })
+                                </div>
+                                <div class="form-group">
+                                    @Html.LabelFor(m => m.Email)
+                                    @Html.TextBoxFor(m => m.Email, new { @class = "form-control", autocomplete = "off" })
+                                </div>
+                            </fieldset>
+                        </div>
+                        
+                        <div class="col-lg-6">
+                            <fieldset disabled>
+                                <div class="form-group">
+                                    @Html.LabelFor(m => m.IsFull)
+                                    @Html.CheckBoxFor(m => m.IsFull, new { @class = "checkbox", autocomplete = "off" })
+                                </div>
+                            </fieldset>
+                            <div class="form-group">
+                                @Html.LabelFor(m => m.DistributionCentersSelected)
+                                @Html.ListBoxFor(x => x.DistributionCentersSelected, new MultiSelectList(Model.DistributionCentersSelect, "Value", "Text"), new { @class = "form-control chosen-select", @data_placeholder="Selecciona algun sitio" })
+                            </div>
+                        </div>
+
+                        <div class="col-lg-12 center">
+                            <button type="submit" class="btn btn-success btn-circle btn-lg" title="Guardar">
+                                <i class="fa fa-check"></i>
+                            </button>
+                            <a href="@Url.Action("Index", "User")" id="cancel" class="btn btn-warning btn-circle btn-lg" title="Cancelar"><i class="fa fa-times"></i></a>
+                        </div>
+
+                        }
+                </div>
+                            
+                <!-- /.row (nested) -->
+            </div>
+            <!-- /.panel-body -->
         </div>
-        <!-- /.col-lg-12 -->
+        <!-- /.panel -->
     </div>
+    <!-- /.col-lg-12 -->
+</div>
     <!-- /.row -->
+@section scripts
+{
+    <script src="~/Content/chosen_v1.8.2/chosen.jquery.js" type="text/javascript"></script>
+    @*<script src="~/Content/chosen_v1.8.2/docsupport/prism.js" type="text/javascript" charset="utf-8"></script>*@
+    @*<script src="~/Content/chosen_v1.8.2/docsupport/init.js" type="text/javascript" charset="utf-8"></script>*@
+    <script>
+        $(".chosen-select").chosen();
+    </script>
+}
