--- a/CCLM/CCLM/Views/DistributionCenter/Create.cshtml
+++ b/CCLM/CCLM/Views/DistributionCenter/Create.cshtml
@@ -19,52 +19,68 @@
                 Crear Sitio
             </div>
             <div class="panel-body">
-                <div class="row">
+
                     @using (Html.BeginForm("Create", "DistributionCenter", FormMethod.Post, new { @class = "form", id = "CreateForm" }))
                     {
-                        <div class="col-lg-6">
-                            <div class="form-group">
-                                @Html.LabelFor(m => m.Code)
-                                @Html.TextBoxFor(m => m.Code, new { @class = "form-control", autocomplete = "off" })
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <div class="form-group">
+                                    @Html.LabelFor(m => m.Code)
+                                    @Html.TextBoxFor(m => m.Code, new { @class = "form-control", autocomplete = "off" })
+                                </div>
                             </div>
-                            
-                            <div class="form-group">
-                                @Html.LabelFor(m => m.ProcessStartTime)
-                                <div class="input-group bootstrap-timepicker timepicker">
-                                    @Html.TextBoxFor(m => m.ProcessStartTime, new { @class = "form-control", autocomplete = "off", @id = "statTimepicker" })
-                                    <span class="input-group-addon"><i class="glyphicon glyphicon-time"></i></span>
+                            <div class="col-lg-6">
+                                <div class="form-group">
+                                    @Html.LabelFor(m => m.Name)
+                                    @Html.TextBoxFor(m => m.Name, new { @class = "form-control", autocomplete = "off" })
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-6">
-                            <div class="form-group">
-                                @Html.LabelFor(m => m.Name)
-                                @Html.TextBoxFor(m => m.Name, new { @class = "form-control", autocomplete = "off" })
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <div class="form-group">
+                                    @Html.LabelFor(m => m.ProcessStartTime)
+                                    <div class="input-group bootstrap-timepicker timepicker">
+                                        @Html.TextBoxFor(m => m.ProcessStartTime, new { @class = "form-control", autocomplete = "off", @id = "statTimepicker" })
+                                        <span class="input-group-addon"><i class="glyphicon glyphicon-time"></i></span>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="form-group">
-                                @Html.LabelFor(m => m.ProcessEndTime)
-                                <div class="input-group bootstrap-timepicker timepicker">
-                                    @Html.TextBoxFor(m => m.ProcessEndTime, new { @class = "form-control", autocomplete = "off", @id = "endTimepicker" })
-                                    <span class="input-group-addon"><i class="glyphicon glyphicon-time"></i></span>
+                            <div class="col-lg-6">
+                                <div class="form-group">
+                                    @Html.LabelFor(m => m.ProcessEndTime)
+                                    <div class="input-group bootstrap-timepicker timepicker">
+                                        @Html.TextBoxFor(m => m.ProcessEndTime, new { @class = "form-control", autocomplete = "off", @id = "endTimepicker" })
+                                        <span class="input-group-addon"><i class="glyphicon glyphicon-time"></i></span>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-6">
-                            <div class="form-group">
-                                @Html.LabelFor(m => m.BinnacleDays)
-                                @Html.TextBoxFor(m => m.BinnacleDays, new { @class = "form-control", autocomplete = "off", @id="tsBinnacle" })
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <div class="form-group">
+                                    @Html.LabelFor(m => m.BinnacleDays)
+                                    @Html.TextBoxFor(m => m.BinnacleDays, new { @class = "form-control", autocomplete = "off", @id = "tsBinnacle" })
+                                </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="form-group">
+                                    @Html.LabelFor(m => m.MailSuccess)
+                                    @Html.CheckBoxFor(m => m.MailSuccess, new { @class = "checkbox", autocomplete = "off" })
+                                </div>
                             </div>
                         </div>
-
-                        <div class="col-lg-12 center">
-                            <button type="submit" class="btn btn-success btn-circle btn-lg" title="Guardar">
-                                <i class="fa fa-check"></i>
-                            </button>
-                            <a href="@Url.Action("Index", "DistributionCenter")" id="cancel" class="btn btn-warning btn-circle btn-lg" title="Cancelar"><i class="fa fa-times"></i></a>
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <button type="submit" class="btn btn-success btn-circle btn-lg" title="Guardar">
+                                    <i class="fa fa-check"></i>
+                                </button>
+                                <a href="@Url.Action("Index", "DistributionCenter")" id="cancel" class="btn btn-warning btn-circle btn-lg" title="Cancelar"><i class="fa fa-times"></i></a>
+                            </div>
                         </div>
+                        
 
                     }
-                </div>
 
                 <!-- /.row (nested) -->
             </div>
@@ -82,7 +98,7 @@
     <script>
         $("#tsBinnacle").TouchSpin({
             min: 1,
-            max: 7,
+            max: 365,
             stepinterval: 1,
             maxboostedstep: 7,
         });
