--- a/CCLM/CCLM/Views/User/Create.cshtml
+++ b/CCLM/CCLM/Views/User/Create.cshtml
@@ -24,15 +24,15 @@
                         <div class="col-lg-6">
                             <div class="form-group">
                                 @Html.LabelFor(m => m.NickName)
-                                @Html.TextBoxFor(m => m.NickName, new { @class = "form-control", autocomplete = "off" })
+                                @Html.TextBoxFor(m => m.NickName, new { @class = "form-control", autocomplete = "off", @id = "nn" })
                             </div>
                             <div class="form-group">
                                 @Html.LabelFor(m => m.FullName)
-                                @Html.TextBoxFor(m => m.FullName, new { @class = "form-control", autocomplete = "off" })
+                                @Html.TextBoxFor(m => m.FullName, new { @class = "form-control", autocomplete = "off", @id = "fn" })
                             </div>
                             <div class="form-group">
                                 @Html.LabelFor(m => m.Email)
-                                @Html.TextBoxFor(m => m.Email, new { @class = "form-control", autocomplete = "off" })
+                                @Html.TextBoxFor(m => m.Email, new { @class = "form-control", autocomplete = "off", @id = "mail" })
                                 @Html.ValidationMessageFor(m=>m.Email)
                             </div>
                         </div>
@@ -73,5 +73,27 @@
     <script src="~/Content/chosen_v1.8.2/docsupport/init.js" type="text/javascript" charset="utf-8"></script>*@
     <script>
         $(".chosen-select").chosen();
+
+        $("#nn").change(function () {
+            var nn = $("#nn").val();
+            var url = '@Url.Action("GetUserData")?nn=' + nn;
+
+            $.ajax({
+                url: url,
+                type: 'GET',
+                success: function (result) {
+                    var resul = result;
+                    
+                    $("#mail").val(result.Email);
+                    $("#fn").val(result.FullName);
+                    
+                },
+                error: function (request, status, error) {
+                    var status_ = status;
+
+                }
+            });
+        });
+
     </script>
 }
